# redfish-exporter

./: .gitignore  Dockerfile  README.md  collector.py  config.yml  dockerbuild.ps1  dockerbuild.sh  dockerfile  handler.py  hosts.txt  main.py  pyproject.toml  redfish-exporter.sh  requirements.txt  simulate.ps1  simulate_check.ps1
.github/workflows/: codeql.yml  ghcr-image-build-and-publish.yml  pylint.yml
collectors/: bios_collector.py  bus_collector.py  certificate_collector.py  channel_collector.py  dcn_collector.py  ethernet_collector.py  firmware_collector.py  health_collector.py  module_collector.py  operating_system_collector.py  performance_collector.py  recursive_collector.py  sensors_collector.py  system_collector.py  utils.py
docs/: redfish-metrics-reference.md
src/redfish_exporter/: collector.py  handler.py  main.py
src/redfish_exporter/collectors/: health_collector.py
